# no-tegridy

./: .gitignore  MANIFEST.in  docker-compose.yml  pyproject.toml  readme.md  setup.py
archive/: init.php  logging.php  utils.php
no_tegridy/: archive.py  cli.py  decrypt.py  injector.py  updatable_zip.py
notegridy/: archive.py  cli.py  generate.php  generate.py  injector.py
notegridy/injected-code/: override.php  rest_api.php
tegrity_framework/: cli.py  injector.py
